# english-spanish-mt-experiment

./: .env.example  .gitignore  README.md  pyproject.toml
azure/: environment.yml  job_train.yaml  submit_job.py
configs/: azure.yaml  data.yaml  model.yaml  train.yaml
data/eval/: english_holdout.jsonl  flores200_dev.jsonl  flores200_devtest.jsonl
data/processed/manifests/: T10000.json  T100000.json  T1000000.json  T50000.json  T500000.json  clean_stats.json
docs/: AZURE_PROVISIONING.md  AZURE_SETUP.md  BENCHMARKS.md  DATA.md  MODEL_CHOICE.md  MODEL_PROBE.json  MODEL_PROBE.md  OBSERVABILITY.md  VASTAI_SETUP.md
scripts/: 00_estimate_runtime.py  01_download_data.py  02_prepare_data.py  03_verify_model.py  04_train.py  05_evaluate.py  06_translate.py  check_azure.py  setup_azure.ps1  upload_data.py  vastai_destroy.py  vastai_provision.py  vastai_run.py  vastai_search.py  vastai_sync.py
src/en_es_mt/: __init__.py  cli.py
src/en_es_mt/data/: clean.py  download.py  format.py  sources.py  tiers.py
src/en_es_mt/eval/: metrics.py  translate.py
src/en_es_mt/model/: loader.py  tokenizer_probe.py
src/en_es_mt/obs/: tracking.py
src/en_es_mt/train/: callbacks.py  collator.py  eta.py  prompt.py  trainer.py
src/en_es_mt/utils/: io.py  logging.py  seed.py
tests/: test_smoke.py
