[project]
name = "en-es-mt"
version = "0.1.0"
description = "Fine-tuning a predominantly-English small LM (SmolLM2-360M) for English<->Spanish translation, with controlled data-tier scaling experiments."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Ethan Kallett" }]

# Core deps installed by default. PyTorch is split into an optional group so
# the right CUDA wheel can be selected on the Azure VM at install time.
dependencies = [
    # HF stack
    "transformers>=4.46,<5",
    "tokenizers>=0.20",
    "datasets>=3.0",
    "accelerate>=1.0",
    "evaluate>=0.4",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    # Eval metrics
    "sacrebleu>=2.4",
    "unbabel-comet>=2.2 ; python_version < '3.13'",
    # Data wrangling
    "pandas>=2.2",
    "numpy>=1.26,<3",
    "pyarrow>=17",
    "zstandard>=0.22",
    "tqdm>=4.66",
    "fasttext-langdetect>=1.0.5",
    "regex>=2024.5",
    # Config / CLI
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    # Observability
    "wandb>=0.18",
    "mlflow>=2.16",
    "tensorboard>=2.17",
    # Azure
    "azure-ai-ml>=1.20",
    "azure-identity>=1.18",
    "azure-mgmt-resource>=23.0",
    "azure-storage-blob>=12.22",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# `uv pip install -e .[cuda]` on a CUDA box — leave to env when targeting Azure
cuda = [
    "torch>=2.4",
]
# Local CPU smoke testing (slow but works on laptop)
cpu = [
    "torch>=2.4",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
]

[project.scripts]
en-es-mt = "en_es_mt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/en_es_mt"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
